# MD_Normalizer

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  PROJECT.md  README.md  pyproject.toml
docs/: release_testing.md  tool_framework.md
docs/decisions/: DECISIONS.md
examples/: rough_ai_output.md  rough_notes.txt
output/: check_report.json  clean.md  report.json
scripts/: release_check.ps1
src/mdnorm/: __init__.py  __main__.py  checker.py  cli.py  io.py  models.py  normalizer.py  parser.py  reporter.py  validator.py
tests/fixtures/release_docs/: changelog_like.md  code_blocks.md  decisions_like.md  has_broken_link.md  nested_examples.md  readme_like.md  tilde_fences.md
tests/unit/: test_checker.py  test_checker_fixtures.py  test_cli.py  test_imports.py  test_io.py  test_module_invocation.py  test_normalizer.py  test_parser.py  test_reporter.py  test_validator.py
